# ClipManager

./: .gitignore  CMakeLists.txt  README.md
installer/: installer.nsi
resources/: app.manifest  resource.rc
src/: clipboard.cpp  clipboard.h  common.h  detector.cpp  detector.h  imaging.cpp  imaging.h  main.cpp  popup.cpp  popup.h  settings.cpp  settings.h  snippets.cpp  snippets.h  storage.cpp  storage.h  tray.cpp  tray.h  wizard.cpp  wizard.h
